--- a/aboutme/byui.html
+++ b/aboutme/byui.html
@@ -8,7 +8,7 @@
     <header>
         <nav>
           
-            <a href="byui.html">Home</a>
+            <a id="active" href="http://index.html">Home</a>
             <a href="https://www.churchofjesuschrist.org">Church of Jesus Christ</a>
             <a href="https://www.churchofjesuschrist.org/temples">Temples</a>
             <a href="https://www.churchofjesuschrist.org/study/scriptures">Scriptures</a>
@@ -19,7 +19,7 @@
       <img src="https://www.byui.edu/images/service-sites/map-banner.jpg"
       alt="BYUI Campus"/></main>
       
-      <p>BYU-Idaho is a comfortable place to learn and grow as a disciple of Jesus christ because students, facaulty and employees  share to live to the gospel </p>
+      <p class='main-para'>BYU-Idaho is a comfortable place to learn and grow as a disciple of Jesus christ because students, facaulty and employees  share to live to the gospel </p>
     </main>
     <footer> 
       <p>My Web Page 2023 ©</p>
